# computational-intelligence-class

./: .gitignore  README.md
algorithms/: __init__.py  biorhythm.py  classification.py  manual_neural.py  preprocessing.py  torch_training.py
functions/: __init__.py  dataframe_utils.py  nn_plotting.py  nn_training.py  path_utils.py  torch_data.py
lab01/biorhythms/: biorhythm.py  biorhythm_ai_fix.py  biorhythm_ai_gen_conext.py  biorhythm_ai_gen_context.py  biorhythm_ai_gen_contextless.py  biorhythm_report.md
lab01/trebuchet/: trebuchet.py  trebuchet_report.md
lab02/task01/: data_validator.py  task01_report.md
lab02/task01/output/: iris_big_corrected.csv  validation_log.csv
lab02/task02/: principal_component_analysis.py  task02_report.md
lab02/task03/: dataset_normalizer.py  task03_report.md
lab03/: lab03_report.md
lab03/task01/: human_categorisation.py  task01_report.md
lab03/task02/: decision_trees.py  task02_report.md
lab03/task03/: classificators.py  task03_report.md
lab03/task04/: diagnosis.py  task04_report.md
lab03/task04/output/: diagnosis_log.csv
lab04/data/: diagnosis.csv
lab04/task01/: neural_test.py
lab04/task01/output/: task01_weight_update_report.txt
lab04/task02/: iris_neural_network.py  task02_report.md
lab04/task02/output/: training_history.csv
lab04/task03/: diagnosis_neural_network.py  task03_report.md
lab04/task03/output/: training_history.csv  validation_metrics.csv
lab05/: .gitignore  compare.py  opencv_and_yolo_comparison.md
lab05/common/: .gitignore  __init__.py  comparison.csv  comparison.py
lab05/task01/: .gitignore  detect_image.py  detect_video.py  task01_report.md
lab05/task01/utils/: json_creator.py  stats.py
lab05/task02/: .gitignore  comparison.csv  opencv_bird_counter.py
lab05/task02/output/: opencv_count.csv  opencv_count.json
lab05/task02/utils/: __init__.py  blob_counter.py  preprocessing.py  review_export.py
lab05/task03/: .gitignore  yolo_bird_counter.py
lab05/task03/output/: yolo_count.csv
lab05/task03/utils/: __init__.py  visualization.py  yolo_utils.py
lab06/task01/: .pre-commit-config.yaml  Makefile  pyproject.toml  task01_report.md
lab06/task01/configs/: compare_experiments.yaml  compare_experiments_diagnosis.yaml  diagnosis_linear_minmax.yaml  diagnosis_linear_zscore.yaml  diagnosis_mlp_minmax.yaml  diagnosis_mlp_zscore.yaml  diagnosis_shallow_zscore.yaml  (+4 more)
lab06/task02/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
lab07/: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
lab07/common/: __init__.py  ga_utils.py  gif_utils.py
lab07/task00/: partition_ga.py
lab07/task01/: .gitignore  task01_report.md
lab07/task01/configs/: knapsack_balanced.yaml  knapsack_default.yaml  knapsack_fixed_seeds.yaml  knapsack_high_mutation.yaml  knapsack_low_budget.yaml  knapsack_original.yaml
lab07/task01/data/: items.py
lab07/task01/experiments/: __init__.py
lab07/task01/src/: __init__.py  config.py  knapsack_ga.py
lab07/task01/tests/: test_config.py  test_knapsack_ga.py
lab07/task02/: task02_report.md
lab07/task02/configs/: alloy_default.yaml
lab07/task02/src/: __init__.py  alloy_ga.py  config.py
lab07/task02/tests/: test_alloys_ga.py  test_config.py
lab07/task03/: task03_report.md
lab07/task03/configs/: maze_baseline.yaml  maze_large.yaml  maze_small.yaml
lab07/task03/data/: maze.py
lab07/task03/src/: __init__.py  config.py  maze_ga.py
lab07/task03/tests/: __init__.py  test_maze_ga.py
lab08/: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
lab08/common/: __init__.py  aco_utils.py  pso_utils.py
lab08/task00/: __init__.py  aco_tsp.py  pso_animation.py  pso_sphere.py
lab08/task01/: __init__.py
lab08/task01/configs/: default_config.yaml
lab08/task01/src/: __init__.py  alloy_pso.py  config.py
lab08/task01/tests/: __init__.py  test_alloy_pso.py  test_config.py  test_sphere_pso.py
lab08/task02/configs/: balanced_alternative.yaml  default_config.yaml  high_exploitation.yaml  high_exploration.yaml
lab08/task02/data/: coords_5x5.py  coords_7.py
lab08/task02/src/: __init__.py  config.py  tsp_aco.py
lab08/task02/tests/: __init__.py  test_config.py  test_tsp_aco.py
lab08/task03/configs/: default_config.yaml
lab08/task03/data/: maze.py
lab08/task03/src/: __init__.py  config.py  maze_aco.py  maze_pso.py
lab08/task03/tests/: test_config.py  test_maze_aco.py  test_maze_pso.py
lab09/: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
lab09/common/: __init__.py  lstm02.py  lstm02_pt.py  lstm03_pt.py  lstm04_pt.py  lstm05.py  lstm05_pt.py  rnn01.py  rnn02.py  rnn03.py
lab09/common/input/: wonderland.txt
lab09/task01/src/: __init__.py  main.py
lab09/task01/src/utils/: __init__.py  lemmatize.py  process_document.py  stop_words.py  tokenize.py  word_cloud.py
lab09/task01/tests/: __init__.py  test_pipeline.py
lab09/task02/src/: __init__.py  main.py
lab09/task02/src/utils/: __init__.py  analysis.py  data.py  plotting.py
lab09/task02/tests/: __init__.py  test_pipeline.py
lab09/task03/src/: __init__.py  main.py
lab09/task03/src/utils/: __init__.py  emotion_analysis.py  fallback.py  no_api_reddit_scraper.py  reddit_scraper.py  scraper.py
lab09/task03/tests/: __init__.py
lab09/task04/src/: __init__.py  lstm01.py  lstm02_pt.py  lstm03.py  lstm03_pt.py  lstm04.py  lstm04_pt.py  lstm05_pt.py  main.py
lab09/task04/tests/: __init__.py  test_mock.py
lab10/: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
lab10/common/: __init__.py  fuzzy_plots.py
lab10/task01/src/: __init__.py  breakout.py  cart_pole.py  frozen_lake.py  half_cheetah.py  lunar_lander.py  pendulum.py  smart_cart_pole.py  smart_frozen_lake.py
lab10/task01/tests/: __init__.py  mock_test.py
lab10/task02/src/: __init__.py  fuzzy_tips.py
lab10/task02/tests/: __init__.py
lab10/task03/src/: __init__.py  fuzzy_pendulum.py
lab10/task03/tests/: __init__.py
lab10/task04/output/: titanic.csv
lab10/task04/src/: __init__.py  titanic_apriori.py
lab10/task04/tests/: __init__.py
(+74 files in other folders)
