[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lab07"
version = "1.0.0"
description = "Genetic Algorithm optimization tasks using PyGAD"
requires-python = ">=3.8"
dependencies = [
    "pygad>=2.18.0",
    "numpy>=1.20.0",
    "matplotlib>=3.4.0",
    "networkx>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["task*", "common*"]
