[project]
name = "lab10"
version = "1.0.0"
description = "fuzzy logic and controllers"
requires-python = ">=3.11,<3.13"
dependencies = [
    "matplotlib>=3.4.0",
    "numpy>=1.20.0",
    "pandas>=3.0.3",
    "networkx>=2.6.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.0",
    "scikit-learn>=1.8.0",
    "torch>=2.12.0",
    "pillow>=10.0.0",
    "nltk>=3.9.4",
    "keras>=3.14.1",
    "tensorflow>=2.21.0",
    "beautifulsoup4>=4.14.3",
    "gym>=0.26.2",
    "gymnasium>=1.3.0",
    "swig>=4.4.1",
    "apriori>=1.3.1",
    "mlxtend>=0.24.0",
    "simpful>=2.12.0",
    "seaborn>=0.13.2",
    "ale-py>=0.12.0",
    "mujoco>=3.9.0",
    "ImageIO>=2.37.3",
    "swig>=4.4.1",
    "Box2D>=2.3.10",
    "pygame>=2.6.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
    "pre-commit>=4.3.0",
    "commitizen>=4.13.9",
    "python-dotenv>=1.1.0",
    "pyright[nodejs]>=1.1.408",
    "ruff>=0.15.5",
]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
	".venv",
	".pytest_cache",
	".ruff_cache",
	"__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PTH", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pyright]
include = ["task01/src", "task01/tests", "task02/src", "task02/tests", "task03/src", "task03/tests", "task04/src", "task04/tests"]
exclude = [".venv", "__pycache__", "**/node_modules", "**/.*"]
typeCheckingMode = "standard"
venvPath = "./"
venv = ".venv"
reportMissingTypeStubs = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["task01/tests", "task02/tests", "task03/tests", "task04/tests"]
addopts = ["--import-mode=importlib"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
major_version_zero = true